<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/cdc" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Login"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Senha"
                android:inputType="textPassword"
                android:imeOptions="actionGo"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_logar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#ff9b19"
            android:text="Entrar"
            android:textColor="#FFF" />


        <Button
            android:id="@+id/login_novo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#ff9b19"
            android:text="Novo Usuario"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/txt_erro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F00"
            android:text=""
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>