<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/vai_para_carrinho"
        android:icon="@drawable/carrinho_vazio"
        android:title="Carrinho"
        app:showAsAction="always"/>

    <item
        android:id="@+id/signout"
        android:icon="@drawable/signout"
        android:title="Signout"
        app:showAsAction="always"/>

</menu>